<?xml version="1.0" encoding="utf-8"?>
<!--Szymon Kuczyński s22466-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight"
            android:scaleType="centerInside"
            android:hint="@string/enter_weight_in_kg"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/height"
        android:scaleType="centerInside"
        android:hint="@string/enter_height_in_cm"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:text="Submit"
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/result"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>